fix spacing v2

--- a/components/home/FadeInGrid.module.css
+++ b/components/home/FadeInGrid.module.css
@@ -9,6 +9,10 @@
   width: 9rem;
   @apply h-auto;
 
+  @screen md {
+    width: 13rem;
+  } 
+
   @screen lg {
     width: 14rem;
   } 
